fontconfig: Added font configuration

--- a/fontconfig/fonts.conf
+++ b/fontconfig/fonts.conf
@@ -6,7 +6,7 @@
 		<prefer>
 			<family>Noto Serif</family>
 			<family>Noto Color Emoji</family>
-			<family>FontAwesome</family>
+			<family>Symbols Nerd Font Mono</family>
 		</prefer>
 	</alias>
 	<alias>
@@ -14,7 +14,7 @@
 		<prefer>
 			<family>Noto Sans</family>
 			<family>Noto Color Emoji</family>
-			<family>FontAwesome</family>
+			<family>Symbols Nerd Font Mono</family>
 		</prefer>
 	</alias>
 	<alias>
@@ -22,16 +22,14 @@
 		<prefer>
 			<family>Noto Sans</family>
 			<family>Noto Color Emoji</family>
-			<family>FontAwesome</family>
+			<family>Symbols Nerd Font Mono</family>
 		</prefer>
 	</alias>
 	<alias>
 		<family>monospace</family>
 		<prefer>
-			<!-- <family>Corporate Mono</family> -->
-			<family>Noto Sans Mono</family>
+			<family>Source Code Pro</family>
 			<family>Symbols Nerd Font Mono</family>
-			<family>FontAwesome</family>
 			<family>Braille</family>
 		</prefer>
 	</alias>
