--- a/fontconfig/fonts.conf
+++ b/fontconfig/fonts.conf
@@ -6,7 +6,6 @@
 		<prefer>
 			<family>Noto Serif</family>
 			<family>Noto Color Emoji</family>
-			<family>Symbols Nerd Font Mono</family>
 		</prefer>
 	</alias>
 	<alias>
@@ -14,7 +13,6 @@
 		<prefer>
 			<family>Noto Sans</family>
 			<family>Noto Color Emoji</family>
-			<family>Symbols Nerd Font Mono</family>
 		</prefer>
 	</alias>
 	<alias>
@@ -22,14 +20,13 @@
 		<prefer>
 			<family>Noto Sans</family>
 			<family>Noto Color Emoji</family>
-			<family>Symbols Nerd Font Mono</family>
 		</prefer>
 	</alias>
 	<alias>
 		<family>monospace</family>
 		<prefer>
 			<family>Source Code Pro</family>
-			<family>Symbols Nerd Font Mono</family>
+			<family>Noto Color Emoji</family>
 			<family>Braille</family>
 		</prefer>
 	</alias>
