i3 & redshift: Get redshift location from Mozilla
Use a script to not clutter i3 config file

--- a/i3/config
+++ b/i3/config
@@ -16,7 +16,7 @@ exec dunst
 # Lockscreen
 exec xss-lock --transfer-sleep-lock -- i3lock --nofork
 # Redshift
-exec redshift
+exec start_redshift
 
 # Font
 font pango:Monospace 8
