--- a/i3status/config
+++ b/i3status/config
@@ -12,14 +12,16 @@ general {
 }
 
 order += "load"
+order += "cpu_temperature 0"
 order += "cpu_usage"
 order += "memory"
+order += "wireless _first_"
 order += "volume master"
 order += "tztime local"
 
 wireless _first_ {
-        format_up = "W: (%quality at %essid) %ip"
-        format_down = "W: down"
+        format_up = "🛜 %quality"
+        format_down = "🛜 down"
 }
 
 ethernet _first_ {
@@ -39,9 +41,14 @@ load {
         format = "💻 %1min %5min %15min"
 }
 
+cpu_temperature 0 {
+    format = "🌡 %degrees C"
+}
+
 cpu_usage {
     format = "🧮 %usage"
 }
+
 memory {
         format = "💽 %percentage_used (%used)"
         threshold_degraded = "1G"
@@ -50,7 +57,7 @@ memory {
 
 volume master {
         format = "🔈 %volume"
-        format_muted = "🔇 (%volume)"
+        format_muted = "🔇 %volume"
         device = "default"
 }
 
