i3: Make audacious window floating

--- a/i3/window_rules.conf
+++ b/i3/window_rules.conf
@@ -18,6 +18,9 @@ for_window [class="minecraft-launcher"] floating enable
 for_window [instance="Places" class="firefox"] floating enable
 for_window [title="Picture-in-Picture"] border pixel 2
 
+# Audacious
+for_window [class="Audacious"] floating enable
+
 # Floating for volume control and network manager managment
 # also for the file manager
 for_window [class="Pavucontrol"] floating enable border pixel 1
