--- a/i3/config
+++ b/i3/config
@@ -10,7 +10,7 @@
 
 # Autostart
 # Polkit
-exec_always /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+# exec_always /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 # Notifications
 exec dunst
 # Lockscreen
