--- a/i3/window_rules.conf
+++ b/i3/window_rules.conf
@@ -11,7 +11,8 @@ for_window [class="Steam"] floating enable
 
 # Minecraft
 assign [class="Minecraft Launcher"] 8
-for_window [class="Minecraft Launcher"] floating enable, resize set 1366 px 768 px
+assign [class="minecraft-launcher"] 8
+# for_window [class="Minecraft Launcher"] floating enable, resize set 1366 px 768 px
 for_window [class="minecraft-launcher"] floating enable
 
 # Firefox
@@ -27,6 +28,4 @@ for_window [class="Pavucontrol"] floating enable border pixel 1
 for_window [class="pcmanfm-qt"] floating enable border pixel 1
 for_window [class="Nm-connection-editor"] floating enable border pixel 1
 
-# for_window [title="(- btop++)$"] floating enable border pixel 1
-# for_window [instance="st" title="^lf$"] floating enable
-# for_window [class="Dragon"] border pixel 1
+for_window [class="Dragon"] border pixel 1
