Revert "rofi: Moved to rofi"
This reverts commit 32a7ce88dc4e2a64582e2f92c8c9fe8b42425515.

--- a/i3/config
+++ b/i3/config
@@ -65,7 +65,7 @@ bindsym $mod+f fullscreen toggle
 
 # Send window to scratchpad
 bindsym $mod+Shift+minus move scratchpad
-bindsym $mod+Shift+plus exec rofi -show window
+bindsym $mod+Shift+plus exec get-from-scratchpad
 
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
