--- a/i3/no_i3_keybindings.conf
+++ b/i3/no_i3_keybindings.conf
@@ -2,7 +2,7 @@
 
 bindsym $mod+Shift+Return exec alacritty
 bindsym $mod+Shift+i exec firefox
-bindsym $mod+p exec j4-dmenu-desktop --dmenu="rofi -show drun -icon-theme 'Adwaita++-Dark-Colorful' -show-icons" --no-generic
+bindsym $mod+p exec j4-dmenu-desktop --no-generic
 
 # Volume control
 bindsym $mod+F5 exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
