i3status: Remove emojis

--- a/i3/window_rules.conf
+++ b/i3/window_rules.conf
@@ -10,10 +10,6 @@ assign [class="Steam"] 8
 for_window [class="Steam"] floating enable
 
 # Minecraft
-assign [class="Minecraft Launcher"] 8
-assign [class="minecraft-launcher"] 8
-# for_window [class="Minecraft Launcher"] floating enable, resize set 1366 px 768 px
-for_window [class="minecraft-launcher"] floating enable
 
 # Firefox
 for_window [instance="Places" class="firefox"] floating enable
@@ -22,10 +18,9 @@ for_window [title="Picture-in-Picture"] border pixel 2
 # Audacious
 for_window [class="Audacious"] floating enable
 
-# Floating for volume control and network manager managment
-# also for the file manager
+# Floating for volume control and network manager managment also for the file manager
 for_window [class="Pavucontrol"] floating enable border pixel 1
-for_window [class="pcmanfm-qt"] floating enable border pixel 1
 for_window [class="Nm-connection-editor"] floating enable border pixel 1
 
 for_window [class="Dragon"] border pixel 1
+assign [class="jetbrains-studio"] 2
