--- a/gtk-3.0/settings.ini
+++ b/gtk-3.0/settings.ini
@@ -1,18 +1,18 @@
 [Settings]
-gtk-theme-name=Arc-Gruvbox
-gtk-icon-theme-name=Adwaita++-Dark-Colorful
+gtk-theme-name=Gruvbox-Material-Dark
+gtk-icon-theme-name=Gruvbox-Material-Dark
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
 gtk-font-name=Sans 10
 gtk-application-prefer-dark-theme=1
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=0
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
-gtk-button-images=1
+gtk-button-images=0
 gtk-menu-images=1
 gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=1
 gtk-xft-antialias=1
 gtk-xft-hinting=1
 gtk-xft-hintstyle=hintfull
-gtk-xft-rgba=none
+gtk-xft-rgba=rgb
 gtk-toolbar-icon-size=GTK_ICON_SIZE_SMALL_TOOLBAR
