--- a/fontconfig/fonts.conf
+++ b/fontconfig/fonts.conf
@@ -5,6 +5,7 @@
 		<family>serif</family>
 		<prefer>
 			<family>Noto Serif</family>
+			<family>Joy Pixels</family>
 			<family>Noto Color Emoji</family>
 		</prefer>
 	</alias>
@@ -12,6 +13,7 @@
 		<family>sans-serif</family>
 		<prefer>
 			<family>Noto Sans</family>
+			<family>Joy Pixels</family>
 			<family>Noto Color Emoji</family>
 		</prefer>
 	</alias>
@@ -19,6 +21,7 @@
 		<family>sans</family>
 		<prefer>
 			<family>Noto Sans</family>
+			<family>Joy Pixels</family>
 			<family>Noto Color Emoji</family>
 		</prefer>
 	</alias>
@@ -26,7 +29,8 @@
 		<family>monospace</family>
 		<prefer>
 			<family>Source Code Pro</family>
-			<family>Noto Color Emoji</family>
+			<family>Liberation Mono</family>
+			<family>FontAwesome</family>
 			<family>Braille</family>
 		</prefer>
 	</alias>
