--- a/newsboat/config
+++ b/newsboat/config
@@ -1,7 +1,5 @@
 # include /usr/share/doc/newsboat/contrib/colorschemes/gruvbox
 
-auto-reload yes
-
 bind-key j down
 bind-key k up
 bind-key j next articlelist
@@ -52,3 +50,5 @@ highlight article "\\[embedded flash: [0-9][0-9]*\\]" green default bold
 highlight article ":.*\\(link\\)$" cyan default
 highlight article ":.*\\(image\\)$" blue default
 highlight article ":.*\\(embedded flash\\)$" magenta default
+
+ignore-article "*" "title =~ \"^Age-restricted\""
