kitty: Better configuration

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,21 +1,17 @@
 tab_bar_style powerline
+
 /* Fonts */
-font_family         monospace
-bold_font           auto
-italic_font         auto
-bold_italic_font    auto
+include fonts.conf
 
-disable_ligatures always
-
-adjust_line_height 110%
-
-font_size 12.0
+/* Cursor */
 
 /* Scrollback */
 scrollback_lines 10000
 
 /* Window layout */
-window_padding_width 2
+window_padding_width 0
+window_margin_width 2
+window_border_width 1
 
 /* Bell */
 enable_audio_bell no
@@ -26,17 +22,17 @@ enable_audio_bell no
 wayland_titlebar_color background
 
 # Scrollback
-
-scrollback_pager nvim -c "set ft=man" -u NONE
+scrollback_lines 4000
+scrollback_pager less +G -R
 
 /* Shell integrations */
 shell_integration no-cursor
 
-include themes/invisibone.conf
+/* Color */
+include themes/tokyonight_storm.conf
 # background_opacity 0.95
 
 # Keybindings
-
 map ctrl+shift+h move_window left
 map ctrl+shift+l move_window right
 map ctrl+shift+k move_window up
@@ -50,7 +46,7 @@ map ctrl+j neighboring_window down
 map ctrl+shift+enter launch --cwd=current
 
 # Layouts
-
+# enabled_layouts * 
 map ctrl+m goto_layout stack
 map ctrl+t goto_layout tall:bias=50;full_size=1;mirrored=false
 
