--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,54 +1,66 @@
-tab_bar_style powerline
-
-/* Fonts */
+# Fonts 
 include fonts.conf
 
-/* Cursor */
+# Cursor 
+cursor_beam_thickness 2.0
 
-/* Scrollback */
-scrollback_lines 10000
+# Mouse 
+url_style dotted
 
-/* Window layout */
+# Mouse Actions 
+
+# Tabs 
+include tabs.conf
+
+# Scrollback 
+include scrollback.conf
+
+# Terminal bell 
+enable_audio_bell no
+# command_on_bell mpg123 /home/erick/.config/local/share/sounds/inaNotiSound.mp3
+
+# Window layout 
+# hide_window_decorations no
+# initial_window_width 1366
+# initial_window_height 768
+
 window_padding_width 0
 window_margin_width 2
-window_border_width 1
+window_border_width 1.5pt
 
-/* Bell */
-enable_audio_bell no
-/* visual_bell_duration 0.05 */
-/* visual_bell_color #ff8059 */
+inactive_text_alpha 0.40
 
-/* Linux tweaks */
-wayland_titlebar_color background
+enabled_layouts vertical,stack
 
-# Scrollback
-scrollback_lines 4000
-scrollback_pager less +G -R
+map ctrl+shift+space next_layout
+# map ctrl+shift+m goto_layout stack
+# map ctrl+shift+f goto_layout fat
+# map ctrl+shift+t goto_layout tall
 
-/* Shell integrations */
+map ctrl+shift+up previous_window
+map ctrl+shift+down next_window
+# map ctrl+: move_window forward
+# map ctrl+; move_window backward
+
+# Linux tweaks 
+# wayland_titlebar_color #ff0000
+
+# Shell integrations 
 shell_integration no-cursor
 
-/* Color */
-include themes/tokyonight_storm.conf
+# Color 
+include themes/kanagawa.conf
 # background_opacity 0.95
 
 # Keybindings
-map ctrl+shift+h move_window left
-map ctrl+shift+l move_window right
-map ctrl+shift+k move_window up
-map ctrl+shift+j move_window down
+# map ctrl+shift+h move_window left
+# map ctrl+shift+l move_window right
+# map ctrl+shift+k move_window up
+# map ctrl+shift+j move_window down
+# 
+# map ctrl+h neighboring_window left
+# map ctrl+l neighboring_window right
+# map ctrl+k neighboring_window up
+# map ctrl+j neighboring_window down
 
-map ctrl+h neighboring_window left
-map ctrl+l neighboring_window right
-map ctrl+k neighboring_window up
-map ctrl+j neighboring_window down
-
-map ctrl+shift+enter launch --cwd=current
-
-# Layouts
-# enabled_layouts * 
-map ctrl+m goto_layout stack
-map ctrl+t goto_layout tall:bias=50;full_size=1;mirrored=false
-
-# map ctrl+p show_scrollback
-# map ctrl+p launch --stdin-source=@screen_scrollback --stdin-add-formatting --type=overlay less +G -R
+map ctrl+shift+return launch --cwd=current
