--- a/kitty/themes/invisibone.conf
+++ b/kitty/themes/invisibone.conf
@@ -46,6 +46,7 @@ active_tab_foreground   #282a36
 active_tab_background   #f8f8f2
 inactive_tab_foreground #282a36
 inactive_tab_background #6272a4
+tab_bar_background #ff0000
 
 # Marks
 mark1_foreground #282a36
