--- a/kitty/themes/kanagawa.conf
+++ b/kitty/themes/kanagawa.conf
@@ -1,21 +1,50 @@
-# Kanagawa Alacritty Colors
-background #1f1f28
-foreground #dcd7ba
+# vim:ft=kitty
 
-color0 #090618
-color1 #c34043
-color2 #76946a
-color3 #c0a36e
-color4 #7e9cd8
-color5 #957fb8
-color6 #6a9589
-color7 #c8c093
+## name: Kanagawa
+## license: MIT
+## author: Tommaso Laurenzi
+## upstream: https://github.com/rebelot/kanagawa.nvim/
 
-color8 #727169
-color9 #e82424
-color10 #98bb6c
-color11 #e6c384
-color12 #7fb4ca
-color13 #938aa9
-color14 #7aa89f
-color15 #dcd7ba
+
+background #1F1F28
+foreground #DCD7BA
+selection_background #2D4F67
+selection_foreground #C8C093
+url_color #72A7BC
+cursor #C8C093
+
+# Tabs
+active_tab_background #C8C093
+active_tab_foreground #1F1F28
+inactive_tab_background  #1F1F28
+inactive_tab_foreground #727169
+#tab_bar_background #15161E
+
+# windows
+active_border_color 	#C8C093
+inactive_border_color 	#1F1F28
+
+# normal
+color0 #16161D
+color1 #C34043
+color2 #76946A
+color3 #C0A36E
+color4 #7E9CD8
+color5 #957FB8
+color6 #6A9589
+color7 #C8C093
+
+# bright
+color8  #727169
+color9  #E82424
+color10 #98BB6C
+color11 #E6C384
+color12 #7FB4CA
+color13 #938AA9
+color14 #7AA89F
+color15 #DCD7BA
+
+
+# extended colors
+color16 #FFA066
+color17 #FF5D62
