--- a/i3/no_i3_keybindings.conf
+++ b/i3/no_i3_keybindings.conf
@@ -1,14 +1,19 @@
 #vim: set filetype=i3config
 
+# bindsym $mod+Shift+Return exec kitty -1
 bindsym $mod+Shift+Return exec alacritty
 bindsym $mod+Shift+i exec firefox
+bindsym $mod+Shift+f exec pcmanfm-qt $HOME
 bindsym $mod+p exec j4-dmenu-desktop --no-generic
 
 # Volume control
 bindsym $mod+F5 exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
-bindsym $mod+F6 exec pactl set-sink-mute @DEFAULT_SINK@ toggle
-bindsym $mod+F7 exec pactl set-sink-volume @DEFAULT_SINK@ -5%
-bindsym $mod+F8 exec pactl set-sink-volume @DEFAULT_SINK@ +5%
+# bindsym $mod+F6 exec pactl set-sink-mute @DEFAULT_SINK@ toggle
+# bindsym $mod+F7 exec pactl set-sink-volume @DEFAULT_SINK@ -5%
+# bindsym $mod+F8 exec pactl set-sink-volume @DEFAULT_SINK@ +5%
+bindsym $mod+F6 exec toggle-mute
+bindsym $mod+F7 exec change-volume -5%
+bindsym $mod+F8 exec change-volume +5%
 # mod4 + shift + F6 i3_scratchpad_show_or_create 'pipewire' 'pavucontrol'
 
 # Media control
@@ -24,3 +29,6 @@ bindsym Control+Mod1+l exec powermenu
 
 # Window size like laptop screen (for games mostly)
 bindsym Control+Mod1+p floating enable, resize set 1366 px 768 px
+
+# Cheatsheet
+bindsym $mod+Menu exec uslayout
