--- a/i3/window_rules.conf
+++ b/i3/window_rules.conf
@@ -9,8 +9,6 @@ for_window [class="Simple-scan"] floating enable border pixel 1
 assign [class="Steam"] 8
 for_window [class="Steam"] floating enable
 
-# Minecraft
-
 # Firefox
 for_window [instance="Places" class="firefox"] floating enable
 for_window [title="Picture-in-Picture"] border pixel 2
@@ -23,4 +21,6 @@ for_window [class="Pavucontrol"] floating enable border pixel 1
 for_window [class="Nm-connection-editor"] floating enable border pixel 1
 
 for_window [class="Dragon"] border pixel 1
-assign [class="jetbrains-studio"] 2
+
+# Cheatsheet
+for_window [class="cheat_uslayout"] floating enable border pixel 1
