--- a/i3/config
+++ b/i3/config
@@ -11,21 +11,24 @@
 # Autostart
 # Polkit
 # exec_always /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+# Unclutter
+exec --no-startup-id unclutter -b
 # Notifications
-exec dunst
+exec --no-startup-id dunst
+# Wallpaper
+exec --no-startup-id /home/erick/.fehbg
 # Lockscreen
 exec xss-lock --transfer-sleep-lock -- i3lock --nofork
 # Redshift
-exec start_redshift
+exec --no-startup-id start_redshift
 
 # Font
-font pango:Monospace 8
+font pango:monospace 9
 
 # Windows
 title_align left
-default_border normal 1
+default_border normal 2
 workspace_auto_back_and_forth yes
-
 # Window and workspace rules
 include $XDG_CONFIG_HOME/i3/window_rules.conf
 
@@ -122,7 +125,7 @@ bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
 # Move to previous workspace
-# bindsym $mod+Tab workspace back_and_forth
+bindsym $mod+Tab workspace back_and_forth
 
 # reload the configuration file
 bindsym $mod+Shift+q reload
@@ -131,6 +134,7 @@ bindsym $mod+Shift+r restart # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
 include $XDG_CONFIG_HOME/i3/no_i3_keybindings.conf
+# include /home/erick/.config/i3/colors.conf
 
 # resize window (you can also use the mouse for that)
 mode "Resize" {
@@ -153,11 +157,17 @@ bindsym $mod+r mode "Resize"
 
 bar {
     status_command i3status
+    font pango:Monospace 11
 
-    colors {
-        active_workspace   #222222 #222222 #FFFFFF
-        inactive_workspace #222222 #222222 #888888
-        urgent_workspace   #900000 #900000 #FFFFFF
-        binding_mode       #900000 #900000 #FFFFFF
-    }
+    # colors {
+    #   background #303030
+    #   statusline #FFFFFF
+    #   separator  #00aa00
+
+    #   focused_workspace  #00aa00 #00aa00 #000000
+    #   active_workspace   #282A36 #44475A #F8F8F2
+    #   inactive_workspace #282A36 #282A36 #BFBFBF
+    #   urgent_workspace   #990000 #990000 #ffffff
+    #   binding_mode       #990000 #990000 #ffffff
+    # }
 }
