--- a/i3status/config
+++ b/i3status/config
@@ -7,15 +7,19 @@
 # If the above line is not correctly displayed, fix your editor first!
 
 general {
+        output_format = "i3bar"
         colors = true
         interval = 5
+        color_good = "#50FA7B"
+        color_degraded = "#F1FA8C"
+        color_bad = "#FF5555"
 }
 
 order += "load"
-order += "cpu_temperature 0"
-order += "cpu_usage"
-order += "memory"
-order += "wireless _first_"
+# order += "cpu_temperature 0"
+# order += "cpu_usage"
+# order += "memory"
+# order += "wireless _first_"
 order += "volume master"
 order += "tztime local"
 
@@ -38,7 +42,7 @@ disk "/" {
 }
 
 load {
-        format = "LOAD %1min %5min %15min"
+        format = "💻 %1min"
 }
 
 cpu_temperature 0 {
@@ -56,11 +60,11 @@ memory {
 }
 
 volume master {
-        format = "VOL %volume"
-        format_muted = "VOL MUTED (%volume)"
+        format = "🔊 %volume"
+        format_muted = "🔇 (%volume)"
         device = "default"
 }
 
 tztime local {
-        format = "%A %d de %B, %H:%M "
+        format = "📅 %A %d de %B, %H:%M "
 }
