--- a/fontconfig/fonts.conf
+++ b/fontconfig/fonts.conf
@@ -4,7 +4,7 @@
 	<alias>
 		<family>serif</family>
 		<prefer>
-			<family>Noto Serif</family>
+			<family>DejaVu Serif</family>
 			<family>Joy Pixels</family>
 			<family>Noto Color Emoji</family>
 		</prefer>
@@ -12,7 +12,7 @@
 	<alias>
 		<family>sans-serif</family>
 		<prefer>
-			<family>Noto Sans</family>
+			<family>DejaVu Sans</family>
 			<family>Joy Pixels</family>
 			<family>Noto Color Emoji</family>
 		</prefer>
@@ -20,7 +20,7 @@
 	<alias>
 		<family>sans</family>
 		<prefer>
-			<family>Noto Sans</family>
+			<family>DejaVu Sans</family>
 			<family>Joy Pixels</family>
 			<family>Noto Color Emoji</family>
 		</prefer>
@@ -28,7 +28,7 @@
 	<alias>
 		<family>monospace</family>
 		<prefer>
-			<family>Source Code Pro</family>
+			<family>DejaVu Sans Mono</family>
 			<family>Liberation Mono</family>
 			<family>FontAwesome</family>
 			<family>Braille</family>
