--- a/gtk-3.0/settings.ini
+++ b/gtk-3.0/settings.ini
@@ -1,6 +1,6 @@
 [Settings]
-gtk-theme-name=Mint-Y-Dark-Grey
-gtk-icon-theme-name=Papirus-Dark
+gtk-theme-name=Dracula
+gtk-icon-theme-name=Dracula
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
 gtk-font-name=Sans 10
 gtk-application-prefer-dark-theme=1
