fish: Initial configuration

--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@
 !README.md
 !.gitignore
 
-!alacritty/**
 !bash/**
+!fish/**
 !flameshot/**
 !gtk-3.0/**
 !gtk-2.0/**
@@ -21,6 +21,7 @@
 !ncmpcpp/**
 !npm/**
 !nvim/**
+!picom/**
 !redshift/**
 !tridactyl/**
 !x11/**
