kitty: Latest configuration

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,3 +1,6 @@
+shell /usr/bin/fish
+editor /usr/bin/nvim
+
 # Fonts 
 include fonts.conf
 
@@ -28,7 +31,7 @@ window_padding_width 0
 window_margin_width 2
 window_border_width 1.5pt
 
-inactive_text_alpha 0.40
+# inactive_text_alpha 0.40
 
 enabled_layouts vertical,stack
 
@@ -50,7 +53,8 @@ shell_integration no-cursor
 
 # Color 
 include themes/kanagawa.conf
-# background_opacity 0.95
+# include themes/modus_vivendi.conf
+background_opacity 0.95
 
 # Keybindings
 # map ctrl+shift+h move_window left
