--- a/kitty/fonts.conf
+++ b/kitty/fonts.conf
@@ -1,11 +1,10 @@
-font_family         monospace
-bold_font           auto
-italic_font         auto
-bold_italic_font    auto
+font_family         FiraCode Nerd Font Mono
+bold_font           FiraCode Nerd Font Mono
+italic_font         FiraCode Nerd Font Mono
+bold_italic_font    FiraCode Nerd Font Mono
 
-font_size 12.0
+font_size 14.0
 
-disable_ligatures always
 adjust_line_height 110%
 
 undercurl_style thin-sparse
