--- a/kitty/scrollback.conf
+++ b/kitty/scrollback.conf
@@ -6,5 +6,5 @@ map ctrl+shift+d scroll_page_down
 map ctrl+shift+u scroll_page_up
 scrollback_pager /home/erick/.config/local/bin/vim-ansi
 map ctrl+shift+page_up show_scrollback
-# map ctrl+shift+h pipe @ansi overlay /home/erick/.config/local/bin/vim-ansi
+# map ctrl+shift+w launch --stdin-source=@screen_scrollback --stdin-add-formatting scriptTest
 # map ctrl+shift+g show_last_command_output
