--- a/kitty/tabs.conf
+++ b/kitty/tabs.conf
@@ -1,5 +1,5 @@
 tab_bar_margin_width 10
-tab_bar_edge bottom
+tab_bar_edge top
 tab_bar_style powerline
 # tab_powerline_style slanted
 tab_title_max_length 15
