fish && kitty: Latest conf

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,7 @@
-shell /usr/bin/fish
+# shell /usr/bin/fish
 editor /usr/bin/nvim
+
+# env SHELL=/usr/bin/fish
 
 # Fonts 
 include fonts.conf
@@ -24,26 +26,8 @@ enable_audio_bell no
 
 # Window layout 
 # hide_window_decorations no
-# initial_window_width 1366
-# initial_window_height 768
 
-window_padding_width 0
-window_margin_width 2
-window_border_width 1.5pt
-
-# inactive_text_alpha 0.40
-
-enabled_layouts vertical,stack
-
-map ctrl+shift+space next_layout
-# map ctrl+shift+m goto_layout stack
-# map ctrl+shift+f goto_layout fat
-# map ctrl+shift+t goto_layout tall
-
-map ctrl+shift+up previous_window
-map ctrl+shift+down next_window
-# map ctrl+: move_window forward
-# map ctrl+; move_window backward
+enabled_layouts stack
 
 # Linux tweaks 
 # wayland_titlebar_color #ff0000
@@ -52,19 +36,6 @@ map ctrl+shift+down next_window
 shell_integration no-cursor
 
 # Color 
-include themes/kanagawa.conf
-# include themes/modus_vivendi.conf
-background_opacity 0.95
+# background_opacity 0.95
 
-# Keybindings
-# map ctrl+shift+h move_window left
-# map ctrl+shift+l move_window right
-# map ctrl+shift+k move_window up
-# map ctrl+shift+j move_window down
-# 
-# map ctrl+h neighboring_window left
-# map ctrl+l neighboring_window right
-# map ctrl+k neighboring_window up
-# map ctrl+j neighboring_window down
-
-map ctrl+shift+return launch --cwd=current
+# map ctrl+shift+n launch --cwd=current
