--- a/kitty/tabs.conf
+++ b/kitty/tabs.conf
@@ -1,11 +1,15 @@
-tab_bar_margin_width 10
-tab_bar_edge top
-tab_bar_style powerline
+tab_bar_margin_width 0
+tab_bar_edge bottom
+tab_bar_style slant
 # tab_powerline_style slanted
-tab_title_max_length 15
+tab_title_max_length 12
 
 map ctrl+shift+t new_tab_with_cwd
-map ctrl+shift+h previous_tab
-map ctrl+shift+j move_tab_backward
-map ctrl+shift+k move_tab_forward
-map ctrl+shift+l next_tab
+map ctrl+shift+j previous_tab
+map ctrl+shift+k next_tab
+
+active_tab_foreground   #ffffff
+active_tab_background   #000000
+inactive_tab_foreground #989898
+inactive_tab_background #545454
+tab_bar_background 		#313131
