--- a/kitty/fonts.conf
+++ b/kitty/fonts.conf
@@ -1,10 +1,11 @@
-font_family         FiraCode Nerd Font Mono
-bold_font           FiraCode Nerd Font Mono
-italic_font         FiraCode Nerd Font Mono
-bold_italic_font    FiraCode Nerd Font Mono
+font_family         Inconsolata Nerd Font Mono
+bold_font           Inconsolata Nerd Font Mono
+italic_font         Inconsolata Nerd Font Mono
+bold_italic_font    Inconsolata Nerd Font Mono
 
-font_size 14.0
+font_size 17.0
 
 adjust_line_height 110%
 
 undercurl_style thin-sparse
+modify_font cell_width 100%
