kitty: Remote control and better diff

--- a/kitty/diff.conf
+++ b/kitty/diff.conf
@@ -8,19 +8,19 @@
 #
 ######################################################################
 
-pygments_style solarized-dark
+pygments_style rrt
 
 # Keep the same basic foreground and background colours
 # for most elements. Do not accentuate the line number columns.
 
-foreground           #B1C9CC
-background           #002A35
+foreground           #ffffff
+background           #000000
 
-title_bg             #B1C9CC
-title_fg             #002A35
+title_bg             #005577
+title_fg             #f0f0f0
 
-margin_fg            #B1C9CC
-margin_bg            #002A35
+margin_fg            #f0f0f0
+margin_bg            #000000
 
 # Try to keep as much constrast as possible with displayed text.
 
@@ -34,12 +34,12 @@ added_margin_bg      #424D00
 
 # Separate thunks gracefully.
 
-hunk_margin_bg       #124366
-hunk_bg              #124366
+hunk_margin_bg       #808080
+hunk_bg              #808080
 
 # Do not especially highlight filler lines.
 
-filler_bg            #002A35
+filler_bg            #000000
 
 # Make search results stand out.
 
