--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,7 +1,6 @@
-# shell /usr/bin/fish
-editor /usr/bin/nvim
-
-# env SHELL=/usr/bin/fish
+# Remote control
+allow_remote_control socket-only
+listen_on unix:/tmp/kitty
 
 # Fonts 
 include fonts.conf
