kitty: Most recent configuration
Added an "adwaita" colorscheme as well as some tweaks to the behavior of
tabs and scrollback

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -8,33 +8,58 @@ include fonts.conf
 # Cursor 
 cursor_beam_thickness 2.0
 
+# Scrollback 
+include scrollback.conf
+
 # Mouse 
 url_style dotted
+# mouse_hide_wait -1
+copy_on_select yes
+strip_trailing_spaces smart
 
-# Mouse Actions 
+# Performance tuning
+
+# Terminal bell 
+enable_audio_bell no
+visual_bell_duration 0.2
+visual_bell_color #241F31
+
+# Window layout 
+hide_window_decorations no
+wayland_titlebar_color red
+
+remember_window_size no
+initial_window_width  1280
+initial_window_height 800
+
+window_border_width 0.5
+draw_minimal_borders yes
+
+inactive_text_alpha 0.2
+
+enabled_layouts splits,stack
+
+map f5 launch --cwd=current --location=hsplit
+map f6 launch --cwd=current --location=vsplit
+map f7 layout_action rotate
+# map ctrl+shift+n launch --cwd=current --location=split
+map ctrl+shift+return launch --cwd=current --location=split
+
+# Switch focus to the neighboring window in the indicated direction
+map ctrl+left neighboring_window left
+map ctrl+right neighboring_window right
+map ctrl+up neighboring_window up
+map ctrl+down neighboring_window down
 
 # Tabs 
 include tabs.conf
 
-# Scrollback 
-include scrollback.conf
-
-# Terminal bell 
-enable_audio_bell no
-# command_on_bell mpg123 /home/erick/.config/local/share/sounds/inaNotiSound.mp3
-
-# Window layout 
-# hide_window_decorations no
-
-enabled_layouts stack
-
 # Linux tweaks 
-# wayland_titlebar_color #ff0000
+wayland_titlebar_color background
 
 # Shell integrations 
 shell_integration no-cursor
 
 # Color 
-# background_opacity 0.95
-
-# map ctrl+shift+n launch --cwd=current
+include ./themes/adwaita.conf
+background_opacity 0.97
