--- a/kitty/tabs.conf
+++ b/kitty/tabs.conf
@@ -1,8 +1,11 @@
+tab_bar_min_tabs 1
+tab_activity_symbol "↻ "
+tab_title_template "{fmt.fg._F15D22}{activity_symbol} {fmt.fg.green}{index} {fmt.fg.tab}{title}"
 tab_bar_margin_width 0
 tab_bar_edge bottom
-tab_bar_style slant
-# tab_powerline_style slanted
-tab_title_max_length 12
+tab_bar_style powerline
+tab_powerline_style slanted
+tab_title_max_length 15
 
 map ctrl+shift+t new_tab_with_cwd
 map ctrl+shift+j previous_tab
