kitty: Latest configuration

--- a/kitty/fonts.conf
+++ b/kitty/fonts.conf
@@ -1,11 +1,16 @@
-font_family         Inconsolata Nerd Font Mono
-bold_font           Inconsolata Nerd Font Mono
-italic_font         Inconsolata Nerd Font Mono
-bold_italic_font    Inconsolata Nerd Font Mono
+font_family         JetBrains Mono
+bold_font           JetBrains Mono
+italic_font         JetBrains Mono
+bold_italic_font    JetBrains Mono
 
-font_size 17.0
+font_size 15.0
 
 adjust_line_height 110%
 
+disable_ligatures always
 undercurl_style thin-sparse
 modify_font cell_width 100%
+
+map ctrl+plus change_font_size all +2.0
+map ctrl+minus change_font_size all -2.0
+map ctrl+0 change_font_size all 0.0
