--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -25,31 +25,20 @@ visual_bell_duration 0.2
 visual_bell_color #241F31
 
 # Window layout 
-hide_window_decorations no
+hide_window_decorations yes
 wayland_titlebar_color red
 
-remember_window_size no
-initial_window_width  1280
-initial_window_height 800
+# remember_window_size no
+# initial_window_width  1280
+# initial_window_height 800
 
 window_border_width 0.5
 draw_minimal_borders yes
 
 inactive_text_alpha 0.2
 
-enabled_layouts splits,stack
-
-map f5 launch --cwd=current --location=hsplit
-map f6 launch --cwd=current --location=vsplit
-map f7 layout_action rotate
-# map ctrl+shift+n launch --cwd=current --location=split
-map ctrl+shift+return launch --cwd=current --location=split
-
-# Switch focus to the neighboring window in the indicated direction
-map ctrl+left neighboring_window left
-map ctrl+right neighboring_window right
-map ctrl+up neighboring_window up
-map ctrl+down neighboring_window down
+# Windows
+include windows.conf
 
 # Tabs 
 include tabs.conf
@@ -61,5 +50,5 @@ wayland_titlebar_color background
 shell_integration no-cursor
 
 # Color 
-include ./themes/adwaita.conf
+include ./themes/kanagawa.conf
 background_opacity 0.97
