--- a/kitty/scrollback.conf
+++ b/kitty/scrollback.conf
@@ -3,9 +3,9 @@ scrollback_lines 10000
 scrollback_pager /home/erick/.config/local/bin/vim-ansi
 scrollback_pager_history_size 100
 
-map ctrl+shift+page_up show_scrollback
+map ctrl+shift+f show_scrollback
 
-map ctrl+shift+n scroll_line_down
-map ctrl+shift+p scroll_line_up
-map ctrl+shift+d scroll_page_down
-map ctrl+shift+u scroll_page_up
+# map ctrl+shift+n scroll_line_down
+# map ctrl+shift+p scroll_line_up
+# map ctrl+shift+d scroll_page_down
+# map ctrl+shift+u scroll_page_up
