--- a/kitty/tabs.conf
+++ b/kitty/tabs.conf
@@ -1,18 +1,22 @@
-tab_bar_min_tabs 1
+# tab_bar_min_tabs 1
 tab_activity_symbol "↻ "
-tab_title_template "{fmt.fg._F15D22}{activity_symbol} {fmt.fg.green}{index} {fmt.fg.tab}{title}"
 tab_bar_margin_width 0
-tab_bar_edge bottom
-tab_bar_style powerline
-tab_powerline_style slanted
-tab_title_max_length 15
+tab_bar_edge top
+tab_bar_style slant
 
 map ctrl+shift+t new_tab_with_cwd
-map ctrl+shift+j previous_tab
-map ctrl+shift+k next_tab
+map ctrl+page_up previous_tab
+map ctrl+page_down next_tab
+map ctrl+shift+page_up move_tab_forward
+map ctrl+shift+page_down move_tab_backward
 
-active_tab_foreground   #ffffff
-active_tab_background   #000000
-inactive_tab_foreground #989898
-inactive_tab_background #545454
-tab_bar_background 		#313131
+map alt+1 goto_tab 1
+map alt+2 goto_tab 2
+map alt+3 goto_tab 3
+map alt+4 goto_tab 4
+map alt+5 goto_tab 5
+map alt+6 goto_tab 6
+map alt+7 goto_tab 7
+map alt+8 goto_tab 8
+map alt+9 goto_tab 9
+map alt+0 goto_tab 10
