--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -26,9 +26,9 @@ visual_bell_color #241F31
 
 # Window layout 
 hide_window_decorations yes
-wayland_titlebar_color red
+wayland_titlebar_color background
 
-# remember_window_size no
+remember_window_size yes
 # initial_window_width  1280
 # initial_window_height 800
 
@@ -43,12 +43,12 @@ include windows.conf
 # Tabs 
 include tabs.conf
 
-# Linux tweaks 
-wayland_titlebar_color background
-
 # Shell integrations 
 shell_integration no-cursor
 
 # Color 
-include ./themes/kanagawa.conf
+include ./themes/adwaita.conf
 background_opacity 0.97
+
+# Clipboard
+map shift+insert paste_from_clipboard
