--- a/kitty/themes/adwaita.conf
+++ b/kitty/themes/adwaita.conf
@@ -33,6 +33,20 @@ color14 #93DDC2
 color7  #DEDDDA
 color15 #F6F5F4
 
+active_tab_foreground   #ffffff
+active_tab_background   #000000
+inactive_tab_foreground #989898
+inactive_tab_background #545454
+tab_bar_background 		#313131
+
+# Splits/Windows
+active_border_color 	#76afbf
+inactive_border_color 	#606060
+
+# Marks
+mark1_foreground #282a36
+mark1_background #ff5555
+
 # Blue 1 		#99C1F1
 # Blue 2 		#62A0EA
 # Blue 3 		#3584E4
