--- a/kitty/tabs.conf
+++ b/kitty/tabs.conf
@@ -7,8 +7,8 @@ tab_bar_style slant
 map ctrl+shift+t new_tab_with_cwd
 map ctrl+page_up previous_tab
 map ctrl+page_down next_tab
-map ctrl+shift+page_up move_tab_forward
-map ctrl+shift+page_down move_tab_backward
+map ctrl+shift+page_up move_tab_backward
+map ctrl+shift+page_down move_tab_forward
 
 map alt+1 goto_tab 1
 map alt+2 goto_tab 2
