kitty:  Latest configuration

--- a/kitty/diff.conf
+++ b/kitty/diff.conf
@@ -8,7 +8,7 @@
 #
 ######################################################################
 
-pygments_style rrt
+pygments_style github-dark
 
 # Keep the same basic foreground and background colours
 # for most elements. Do not accentuate the line number columns.
