--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -22,11 +22,11 @@ strip_trailing_spaces smart
 # Terminal bell 
 enable_audio_bell no
 visual_bell_duration 0.2
-visual_bell_color #241F31
+# visual_bell_color #241F31
 
 # Window layout 
 hide_window_decorations yes
-wayland_titlebar_color background
+# wayland_titlebar_color background
 
 remember_window_size yes
 # initial_window_width  1280
@@ -47,8 +47,8 @@ include tabs.conf
 shell_integration no-cursor
 
 # Color 
-include ./themes/adwaita.conf
-background_opacity 0.97
+include ./themes/adwaita-dark.conf
+background_opacity 1
 
 # Clipboard
 map shift+insert paste_from_clipboard
