--- a/kitty/tabs.conf
+++ b/kitty/tabs.conf
@@ -2,7 +2,8 @@
 tab_activity_symbol "↻ "
 tab_bar_margin_width 0
 tab_bar_edge top
-tab_bar_style slant
+tab_bar_style fade
+tab_fade 1
 
 map ctrl+shift+t new_tab_with_cwd
 map ctrl+page_up previous_tab
