--- a/kitty/themes/adwaita-light.conf
+++ b/kitty/themes/adwaita-light.conf
@@ -1,5 +1,14 @@
-background #000000
-foreground #DEDDDA
+# vim:ft=kitty
+
+# name: Adwaita-light
+
+background #ffffff
+foreground #000000
+
+selection_background #1C71D8
+selection_foreground #FFFFFF
+
+cursor none
 
 # black
 color0  #000000
@@ -33,8 +42,8 @@ color14 #93DDC2
 color7  #DEDDDA
 color15 #F6F5F4
 
-active_tab_foreground   #ffffff
-active_tab_background   #000000
+active_tab_foreground   #000000
+active_tab_background   #ffffff
 inactive_tab_foreground #989898
 inactive_tab_background #545454
 tab_bar_background 		#313131
