--- a/kitty/fonts.conf
+++ b/kitty/fonts.conf
@@ -1,16 +1,12 @@
-font_family         JetBrains Mono 
-bold_font           JetBrains Mono 
-italic_font         JetBrains Mono 
-bold_italic_font    JetBrains Mono 
+font_family         Comic Mono 
+bold_font           Comic Mono 
+italic_font         Comic Mono 
+bold_italic_font    Comic Mono 
 
-font_size 14.0
+font_size 16.0
 
 adjust_line_height 110%
 
 disable_ligatures always
 undercurl_style thin-sparse
 modify_font cell_width 100%
-
-map ctrl+plus change_font_size all +2.0
-map ctrl+minus change_font_size all -2.0
-map ctrl+0 change_font_size all 0.0
