--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -48,7 +48,7 @@ shell_integration no-cursor
 
 # Color 
 include ./themes/adwaita-dark.conf
-background_opacity 1
+background_opacity 0.95
 
-# Clipboard
-map shift+insert paste_from_clipboard
+# Keybindings
+include keybindings.conf
