--- a/kitty/diff.conf
+++ b/kitty/diff.conf
@@ -1,52 +1,51 @@
-######################################################################
-#
-# My kitty diff dark colour scheme to match my general kitty
-# terminal colour scheme.
-#
-# Aral Balkan (https://ar.al).
-# Public domain.
-#
-######################################################################
+# vim:ft=kitty
 
-pygments_style github-dark
+## name:     Catppuccin Kitty Diff Mocha
+## author:   Catppuccin Org
+## license:  MIT
+## upstream: https://github.com/catppuccin/kitty/blob/main/themes/diff-mocha.conf
+## blurb:    Soothing pastel theme for the high-spirited!
 
-# Keep the same basic foreground and background colours
-# for most elements. Do not accentuate the line number columns.
+pygments_style lightbulb
+# text
+foreground           #CDD6F4
+# base
+background           #1E1E2E
+# subtext0
+title_fg             #A6ADC8
 
-foreground           #ffffff
-background           #000000
+# mantle
+title_bg             #181825
+margin_bg            #181825
 
-title_bg             #005577
-title_fg             #f0f0f0
+# subtext1
+margin_fg            #A6ADC8
+# mantle
+filler_bg            #181825
 
-margin_fg            #f0f0f0
-margin_bg            #000000
+# 30% red, 70% base
+removed_bg           #5E3F53
+# 50% red, 50% base
+highlight_removed_bg #89556B
+# 40% red, 60% base
+removed_margin_bg    #734A5F
 
-# Try to keep as much constrast as possible with displayed text.
+# 30% green, 70% base
+added_bg             #475951
+# 50% green, 50% base
+highlight_added_bg   #628168
+# 40% green, 60% base
+added_margin_bg      #546D5C
 
-removed_bg           #661715
-highlight_removed_bg #992220
-removed_margin_bg    #661715
+# mantle
+hunk_margin_bg       #181825
+hunk_bg              #181825
 
-added_bg             #424D00
-highlight_added_bg   #586600
-added_margin_bg      #424D00
-
-# Separate thunks gracefully.
-
-hunk_margin_bg       #808080
-hunk_bg              #808080
-
-# Do not especially highlight filler lines.
-
-filler_bg            #000000
-
-# Make search results stand out.
-
-search_bg            #258AD1
-search_fg            white
-
-# Make selections stand out.
-
-select_bg            #29A097
-select_fg            black
+# 40% yellow, 60% base
+search_bg            #A1937B
+# text
+search_fg            #CDD6F4
+# 30% sky, 70% base
+select_bg            #45475A
+# text
+select_fg            #CDD6F4
