--- a/kitty/fonts.conf
+++ b/kitty/fonts.conf
@@ -1,9 +1,9 @@
-font_family         Comic Mono 
-bold_font           Comic Mono 
-italic_font         Comic Mono 
-bold_italic_font    Comic Mono 
+font_family         JetBrains Mono
+bold_font           JetBrains Mono
+italic_font         JetBrains Mono
+bold_italic_font    JetBrains Mono
 
-font_size 16.0
+font_size 14.0
 
 adjust_line_height 110%
 
