--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -17,25 +17,10 @@ url_style dotted
 copy_on_select yes
 strip_trailing_spaces smart
 
-# Performance tuning
-
 # Terminal bell 
 enable_audio_bell no
 visual_bell_duration 0.2
 # visual_bell_color #241F31
-
-# Window layout 
-hide_window_decorations yes
-# wayland_titlebar_color background
-
-remember_window_size yes
-# initial_window_width  1280
-# initial_window_height 800
-
-window_border_width 0.5
-draw_minimal_borders yes
-
-inactive_text_alpha 0.2
 
 # Windows
 include windows.conf
@@ -47,8 +32,8 @@ include tabs.conf
 shell_integration no-cursor
 
 # Color 
-include ./themes/adwaita-dark.conf
-background_opacity 0.95
+include ./themes/mocha.conf
+background_opacity 1.00
 
 # Keybindings
 include keybindings.conf
