--- a/kitty/tabs.conf
+++ b/kitty/tabs.conf
@@ -1,7 +1,8 @@
-# tab_bar_min_tabs 1
-tab_activity_symbol "↻ "
+tab_bar_min_tabs 1
+tab_activity_symbol "... "
 tab_bar_margin_width 0
+tab_bar_margin_height 0 0
 tab_bar_edge top
-tab_bar_style fade
-tab_fade 1
-
+tab_bar_style slant
+# tab_powerline_style slanted
+tab_title_template "{fmt.fg.green}{bell_symbol}{activity_symbol}{fmt.fg.tab}{title}"
