--- a/kitty/windows.conf
+++ b/kitty/windows.conf
@@ -1,2 +1,8 @@
 enabled_layouts splits,stack
-window_padding_width 3
+window_padding_width 0
+hide_window_decorations yes
+remember_window_size yes
+window_border_width 0.5
+draw_minimal_borders yes
+inactive_text_alpha 0.3
+
