Lates before migration

--- a/kitty/keybindings.conf
+++ b/kitty/keybindings.conf
@@ -37,6 +37,11 @@ map ctrl+a>l neighboring_window right
 map ctrl+a>k neighboring_window up
 map ctrl+a>j neighboring_window down
 
+map ctrl+a>left neighboring_window left
+map ctrl+a>right neighboring_window right
+map ctrl+a>up neighboring_window up
+map ctrl+a>down neighboring_window down
+
 # Go to nth window
 map ctrl+a>1 first_window
 map ctrl+a>2 second_window
