--- a/kitty/tabs.conf
+++ b/kitty/tabs.conf
@@ -3,6 +3,7 @@ tab_activity_symbol "... "
 tab_bar_margin_width 0
 tab_bar_margin_height 0 0
 tab_bar_edge top
-tab_bar_style slant
-# tab_powerline_style slanted
-tab_title_template "{fmt.fg.green}{bell_symbol}{activity_symbol}{fmt.fg.tab}{title}"
+tab_bar_style powerline
+tab_separator ""
+tab_powerline_style slanted
+tab_title_template "{fmt.fg._d0bc00}{index} {fmt.fg._44bc44}{bell_symbol}{activity_symbol}{fmt.fg.tab}{title} "
