--- a/kitty/windows.conf
+++ b/kitty/windows.conf
@@ -1,8 +1,10 @@
 enabled_layouts splits,stack
-window_padding_width 0
+window_padding_width 5
 hide_window_decorations yes
 remember_window_size yes
-window_border_width 0.5
-draw_minimal_borders yes
+initial_window_width 1280
+initial_window_height 800
+window_border_width 1
+window_margin_width 1
+draw_minimal_borders no
 inactive_text_alpha 0.3
-
