--- a/.gitignore
+++ b/.gitignore
@@ -6,15 +6,12 @@
 !.gitignore
 
 !bash/**
-!flameshot/**
-!i3/**
-!i3status/**
+!hypr/**
 !kitty/**
 !lf/**
 !local/**
+!mpv/**
 !npm/**
 !nvim/**
-!redshift/**
-kitty/current-theme.conf
-kitty/kitty.conf.bak
-nvim/lazy-lock.json
+!waybar/**
+!wofi/**
