--- a/kitty/scrollback.conf
+++ b/kitty/scrollback.conf
@@ -1,9 +1,4 @@
 scrollback_lines 10000
 
-scrollback_pager /home/erick/.config/local/bin/vim-ansi
-scrollback_pager_history_size 100
-
-# map ctrl+shift+n scroll_line_down
-# map ctrl+shift+p scroll_line_up
-# map ctrl+shift+d scroll_page_down
-# map ctrl+shift+u scroll_page_up
+scrollback_pager /home/javier/.config/local/bin/vim-ansi
+scrollback_pager_history_size 1000
