--- a/kitty/current-theme.conf
+++ b/kitty/current-theme.conf
@@ -1,60 +1,53 @@
-# vim:ft=kitty
+## name: Rosé Pine
+## author: mvllow
+## license: MIT
+## upstream: https://github.com/rose-pine/kitty/blob/main/dist/rose-pine.conf
+## blurb: All natural pine, faux fur and a bit of soho vibes for the classy minimalist
 
-## name: Modus Vivendi Tinted
-## author: Protesilaos Stavrou
-## license: GNU GPLv3
-## blurb: Highly accessible themes made for GNU Emacs, conforming with the highest
-## standard for colour contrast between background and foreground values (WCAG AAA)
+foreground               #e0def4
+background               #191724
+selection_foreground     #e0def4
+selection_background     #403d52
 
-# The basic colors
-foreground              #ffffff
-background              #0d0e1c
-selection_foreground    #ffffff
-selection_background    #5c5c5c
+cursor                   #524f67
+cursor_text_color        #e0def4
 
-# Cursor colors
-cursor                  #ffffff
-cursor_text_color       #0d0e1c
+url_color                #c4a7e7
 
-# kitty window border colors
-active_border_color     #c6daff
-inactive_border_color   #595959
+active_tab_foreground    #e0def4
+active_tab_background    #26233a
+inactive_tab_foreground  #6e6a86
+inactive_tab_background  #191724
 
-# Tab bar colors
-active_tab_foreground   #ffffff
-active_tab_background   #4a4f6a
-inactive_tab_foreground #969696
-inactive_tab_background #2b3046
-
-# The basic 16 colors
 # black
-color0 #0d0e1c
-color8 #595959
+color0   #26233a
+color8   #6e6a86
 
 # red
-color1 #ff5f59
-color9 #ff7f9f
+color1   #eb6f92
+color9   #eb6f92
 
 # green
-color2  #44bc44
-color10 #70b900
+color2   #31748f
+color10  #31748f
 
 # yellow
-color3  #d0bc00
-color11 #fec43f
+color3   #f6c177
+color11  #f6c177
 
 # blue
-color4  #2fafff
-color12 #79a8ff
+color4   #9ccfd8
+color12  #9ccfd8
 
 # magenta
-color5  #feacd0
-color13 #b6a0ff
+color5   #c4a7e7
+color13  #c4a7e7
 
 # cyan
-color6  #00d3d0
-color14 #6ae4b9
+color6   #ebbcba
+color14  #ebbcba
 
 # white
-color7  #989898
-color15 #ffffff
+color7   #e0def4
+color15  #e0def4
+
