--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -25,6 +25,8 @@ env = XDG_CONFIG_HOME,/home/javier/.config/
 # Set wallpaper
 exec-once=swaybg -i ~/Pictures/Wallpapers/Draw/Anime/anime_room.png -m center
 
+exec-once=/usr/libexec/kf5/polkit-kde-authentication-agent-1
+
 # Launch waybar
 exec-once=waybar
 
