--- a/i3/config
+++ b/i3/config
@@ -10,7 +10,9 @@
 
 # Autostart
 # Polkit
-# exec_always /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec --no-startup-id /usr/libexec/kf5/polkit-kde-authentication-agent-1
+# Bar
+exec_always --no-startup-id ~/.config/polybar/launch.sh
 # Unclutter
 exec --no-startup-id unclutter -b
 # Notifications
@@ -23,7 +25,7 @@ exec xss-lock --transfer-sleep-lock -- i3lock --nofork
 exec --no-startup-id start_redshift
 
 # Font
-font pango:monospace 9
+font pango:Geist Mono 10
 
 # Windows
 title_align left
@@ -134,7 +136,7 @@ bindsym $mod+Shift+r restart # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
 include $XDG_CONFIG_HOME/i3/no_i3_keybindings.conf
-# include /home/erick/.config/i3/colors.conf
+# include /home/javier/.config/i3/colors.conf
 
 # resize window (you can also use the mouse for that)
 mode "Resize" {
@@ -155,9 +157,9 @@ mode "Resize" {
 
 bindsym $mod+r mode "Resize"
 
-bar {
-    status_command i3status
-    font pango:Monospace 11
+# bar {
+#     status_command i3status
+#     font pango:Geist Mono 11
 
     # colors {
     #   background #303030
@@ -170,4 +172,4 @@ bar {
     #   urgent_workspace   #990000 #990000 #ffffff
     #   binding_mode       #990000 #990000 #ffffff
     # }
-}
+# }
