--- a/i3/no_i3_keybindings.conf
+++ b/i3/no_i3_keybindings.conf
@@ -1,9 +1,8 @@
 #vim: set filetype=i3config
 
-# bindsym $mod+Shift+Return exec kitty -1
-bindsym $mod+Shift+Return exec alacritty
+bindsym $mod+Shift+Return exec kitty -1
 bindsym $mod+Shift+i exec firefox
-bindsym $mod+Shift+f exec pcmanfm-qt $HOME
+bindsym $mod+Shift+f exec thunar
 bindsym $mod+p exec j4-dmenu-desktop --no-generic
 
 # Volume control
@@ -24,11 +23,11 @@ bindsym $mod+F11 exec playerctl next
 # Printscreen
 bindsym Print exec flameshot gui
 
-# Lock Screen
-bindsym Control+Mod1+l exec powermenu
+# Session menu
+bindsym Control+Mod1+l exec sessionmenu
+
+# Power profile menu
+bindsym Control+Mod1+p exec powermenu
 
 # Window size like laptop screen (for games mostly)
-bindsym Control+Mod1+p floating enable, resize set 1366 px 768 px
-
-# Cheatsheet
-bindsym $mod+Menu exec uslayout
+# bindsym Control+Mod1+p floating enable, resize set 1366 px 768 px
