Change kitty keybindings

--- a/kitty/keybindings.conf
+++ b/kitty/keybindings.conf
@@ -19,44 +19,49 @@ map alt+0 goto_tab 10
 # WINDOWS
 # Launch new window
 map ctrl+shift+enter launch --cwd=current --location=split
-# map ctrl+a>% launch --cwd=current --location=vsplit
-# map ctrl+a>" launch --cwd=current --location=hsplit
+map ctrl+b>% launch --cwd=current --location=vsplit
+map ctrl+b>" launch --cwd=current --location=hsplit
 
 # Next and previous window
-# map ctrl+a>n next_window
-# map ctrl+a>p previous_window
+map ctrl+b>n next_window
+map ctrl+b>p previous_window
 
-# map ctrl+a>& close_window
+map ctrl+b>& close_window
 map ctrl+shift+f7 layout_action rotate
 map f11 toggle_fullscreen
 map ctrl+shift+n new_os_window_with_cwd
 
 # Switch focus to the neighboring window in the indicated direction
-map ctrl+shift+left neighboring_window left
-map ctrl+shift+right neighboring_window right
-map ctrl+shift+up neighboring_window up
-map ctrl+shift+down neighboring_window down
-#
-# map ctrl+a>left neighboring_window left
-# map ctrl+a>right neighboring_window right
-# map ctrl+a>up neighboring_window up
-# map ctrl+a>down neighboring_window down
+# map ctrl+shift+left neighboring_window left
+# map ctrl+shift+right neighboring_window right
+# map ctrl+shift+up neighboring_window up
+# map ctrl+shift+down neighboring_window down
+
+map ctrl+b>h neighboring_window left
+map ctrl+b>l neighboring_window right
+map ctrl+b>k neighboring_window up
+map ctrl+b>j neighboring_window down
+
+map ctrl+b>left neighboring_window left
+map ctrl+b>right neighboring_window right
+map ctrl+b>up neighboring_window up
+map ctrl+b>down neighboring_window down
 
 # Go to nth window
-# map ctrl+a>1 first_window
-# map ctrl+a>2 second_window
-# map ctrl+a>3 third_window
-# map ctrl+a>4 fourth_window
-# map ctrl+a>5 fifth_window
-# map ctrl+a>5 sixth_window
-# map ctrl+a>7 seventh_window
-# map ctrl+a>8 eighth_window
-# map ctrl+a>9 ninth_window
-# map ctrl+a>0 tenth_window
+map ctrl+b>1 first_window
+map ctrl+b>2 second_window
+map ctrl+b>3 third_window
+map ctrl+b>4 fourth_window
+map ctrl+b>5 fifth_window
+map ctrl+b>5 sixth_window
+map ctrl+b>7 seventh_window
+map ctrl+b>8 eighth_window
+map ctrl+b>9 ninth_window
+map ctrl+b>0 tenth_window
 
 # LAYOUT
-# map ctrl+a>space next_layout
-# map ctrl+a>z toggle_layout stack
+map ctrl+b>space next_layout
+map ctrl+b>z toggle_layout stack
 
 # SCROLLBACK
 # map ctrl+shift+f show_scrollback
