--- a/kitty/windows.conf
+++ b/kitty/windows.conf
@@ -1,6 +1,6 @@
+remember_window_size yes
 enabled_layouts splits,stack
 window_padding_width 5
 hide_window_decorations yes
-remember_window_size no
 draw_minimal_borders yes
 inactive_text_alpha 0.3
