--- a/kitty/fonts.conf
+++ b/kitty/fonts.conf
@@ -1,7 +1,7 @@
-font_family         Inconsolata
-bold_font           Inconsolata
-italic_font         Inconsolata
-bold_italic_font    Inconsolata
+font_family         JetBrains Mono
+bold_font           JetBrains Mono
+italic_font         JetBrains Mono
+bold_italic_font    JetBrains Mono
 
-font_size 16.0
+font_size 14.0
 disable_ligatures always
